# genotype-parser

./: .gitignore  README.md  data-parser.cabal  genotype-parser.cabal
app/: Main.hs
src/: Types.hs
src/Genotype/: Comparison.hs  Processor.hs  Types.hs
src/Genotype/Parser/: FastPhase.hs
src/Genotype/Printer/: Arlequin.hs  Geno.hs
src/Parser/: FastPhase.hs
src/Printer/: Geno.hs
