name:                genotype-parser
version:             0.1.0.0
homepage:            https://github.com/Jonplussed/genotype-parser
license:             BSD3
license-file:        LICENSE
author:              Jonathan Childress
copyright:           2017 Jonathan Childress
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Genotype.Parser.FastPhase
                     , Genotype.Printer.Arlequin
                     , Genotype.Printer.Geno
                     , Genotype.Processor
                     , Genotype.Processor.KeepColumnNumbers
  other-modules:       Genotype.Comparison
                     , Genotype.Types
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , vector
  default-language:    Haskell2010

executable genotype-parser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , genotype-parser
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite genotype-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genotype-parser
                     , attoparsec
                     , interpolatedstring-perl6
                     , text
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Jonplussed/genotype-parser
